fix top area spacing for mobile

--- a/_sass/templates/_hero-area.scss
+++ b/_sass/templates/_hero-area.scss
@@ -1,5 +1,10 @@
 .hero-area {
   position: relative;
+  @include mobile {
+    top: 9.5em;
+    padding-bottom: 100px;
+  }
+
   @include tablet {
     overflow: hidden;
   }
@@ -59,15 +64,31 @@
   right: -10px;
 }
 
-.layer-bg {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  top: 0;
-  right: 0;
-}
-
 .social-media-list {
   position: absolute;
   top: 20em;
+
+  @media (max-width: 1100px) {
+    position: absolute;
+    font-size: 3vw;
+    top: 7em;
+  }
+
+  @include mobile {
+    position: absolute;
+    top: 4em;
+    left: 0.5em;
+  }
+}
+
+.social-icon {
+  font-size: 5vw;
+
+  @media (max-width: 1100px) {
+    font-size: 3vw;
+  }
+
+  @include mobile {
+    font-size: 4vw;
+  }
 }
